--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/ChangePasswordDialog.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/dialogs/ChangePasswordDialog.mxml
@@ -58,6 +58,7 @@
                     event.data = {user : modelLocator.selectedUser, password : newPasswordTxt.text};
                     dispatchEvent(event);
                     closeDialog();
+                    return;
     			}
                 Alert.show(I18nUtil.trans(I18nUtil.APP_MAIN, "info_change_password_wrong"));
     		}
