worked on preferences and added custom exception translator around service layer
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1498 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/SettingManagementView.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/SettingManagementView.mxml
@@ -42,8 +42,8 @@
             import org.granite.tide.spring.Identity;
 
         	import org.openwms.core.domain.system.AbstractPreference;
-        	import org.openwms.core.domain.system.ApplicationPreference;
-        	import org.openwms.core.domain.system.ModulePreference;
+        	import org.openwms.core.domain.preferences.ApplicationPreference;
+        	import org.openwms.core.domain.preferences.ModulePreference;
         	import org.openwms.core.domain.system.usermanagement.RolePreference;
         	import org.openwms.core.domain.system.usermanagement.UserPreference;
         	import org.openwms.web.flex.client.event.RoleEvent;
