Worked on preferences, added Javadoc, replaced hard coded version in template.mf with Maven property
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@1507 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
+++ b/org.openwms/trunk/org.openwms.app/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/App.mxml
@@ -33,6 +33,7 @@
         [ManagedEvent(name="LOAD_ALL_MODULES")]
         [ManagedEvent(name="UNLOAD_ALL_MODULES")]
         [ManagedEvent(name="I18N_LOAD_ALL")]
+        [ManagedEvent(name="PROPERTY.LOAD_ALL_PROPERTIES")]
         [ResourceBundle("appMain")]
         [ResourceBundle("appError")]
     </mx:Metadata>
